--- a/style.css
+++ b/style.css
@@ -1,12 +1,39 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .header,
 .top,
 .footer {
     background-color: #1F2937;
+}
+
+ul {
+    list-style: none;
+    padding: 0px;
+    display: flex;
+    flex-direction: row;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: #F9FAF8;
+}
+
+.header ul {
+    font-size: 18px;
+    color: #E5E7Eb;
+    gap: 20px;
 }
 
 .slice {
