--- a/style.css
+++ b/style.css
@@ -31,13 +31,29 @@ ul {
 }
 
 .header ul {
-    font-size: 18px;
-    color: #E5E7Eb;
     gap: 20px;
+}
+
+.header, 
+.hero-secondary {
+    font-size: 18px;
+    color: #E5E7Eb;    
 }
 
 .slice {
     display: flex;
+}
+
+.side-by-side {
+    display: flex;
+    direction: row;
+    margin: 60px 100px;
+}
+
+.hero-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
 }
 
 .info {
