--- a/style.css
+++ b/style.css
@@ -50,11 +50,36 @@ ul {
     margin: 60px 100px;
 }
 
+.side-by-side div {
+    width: 300px;
+}
+
+button {
+    color: #FFFFFF;
+    background-color: #3882F6;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 0px;
+    padding: 5px 20px;
+    cursor: pointer;
+}
+
 .hero-text {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
 }
+
+.large-image {
+    color: #E5E7Eb;
+    background-color: #6d747d;
+    min-width: 300px;
+    min-height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .info {
     flex-direction: row;
