--- a/style.css
+++ b/style.css
@@ -47,11 +47,21 @@ ul {
 .side-by-side {
     display: flex;
     direction: row;
-    margin: 60px 100px;
+    margin: 80px 100px;
+    gap: 36px;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
 }
 
 .side-by-side div {
-    width: 300px;
+    width: 400px;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 button {
@@ -61,6 +71,7 @@ button {
     border-radius: 5px;
     border: 0px;
     padding: 5px 20px;
+    width: 100px;
     cursor: pointer;
 }
 
@@ -68,13 +79,15 @@ button {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
+    line-height: 95%;
 }
 
 .large-image {
     color: #E5E7Eb;
     background-color: #6d747d;
-    min-width: 300px;
-    min-height: 150px;
+    /* width: 400px; */
+    /* height: 200px; */
+    align-self: stretch;
     display: flex;
     justify-content: center;
     align-items: center;
