--- a/style.css
+++ b/style.css
@@ -209,3 +209,11 @@ button {
     border: 2px solid #F9FAF8;
     margin: 30px 64px;
 }
+
+.footer {
+    display: flex;
+    color: #E5E7Eb;
+    height: 80px;
+    align-items: center;
+    justify-content: center;
+}
