--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0px;
 }
 
 .header,
